--- a/src/app/sl-details/sl-details.component.scss
+++ b/src/app/sl-details/sl-details.component.scss
@@ -69,21 +69,26 @@ sl-details::part(header) {
   }
 
   sl-icon {
-    margin-right: 20px;
-
-    &::part(base) {
-      text-align: left;
-    }
-  }
-
-  a {
-    text-decoration: none;
+    margin-right: 10px;
   }
 
   .attachments {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+  }
+  .attachment {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid grey;
+    border-radius: 5px;
+    width: 70px;
+    height: 30px;
+    margin: 5px 0 5px 5px;
+    color: white;
+    background-color: grey;
   }
 
   .select-all {
