Page layout, created table component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,16 @@
-<app-sl-header></app-sl-header>
+<h1 [style]="'margin-left: 50px; font-weight: 100;'">Employment Screening</h1>
+<div class="container">
 
-<app-sl-progress-card></app-sl-progress-card>
-<app-sl-details></app-sl-details>
+  <div class="container-progress-card">
+    <app-sl-progress-card></app-sl-progress-card>
+  </div>
+
+  <div class="container-details-card">
+    <app-sl-details></app-sl-details>
+  </div>
+
+  <div class="container-table-card">
+    <app-table></app-table>
+  </div>
+
+</div>
