--- a/src/app/sl-details/sl-details.component.scss
+++ b/src/app/sl-details/sl-details.component.scss
@@ -3,14 +3,15 @@
 .details-group-example sl-details:not(:last-of-type) {
   margin-bottom: var(--sl-spacing-xx-small);
 }
-.details-group-example {
-  margin: 2rem 0 0 2rem;
-  max-width: 15rem;
-}
 
 sl-button {
   margin: 0 auto;
   margin-bottom: 1.5rem;
+}
+
+sl-details {
+  width: 15em;
+  margin: 10px 0 0 10px;
 }
 
 p, sl-badge, sl-button {
