Updated table design to match mockup

--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -14,52 +14,52 @@
   <div class="table-container-table">
     <table>
         <tr>
-          <th align="left"><input type="checkbox"/></th>
-          <th align="left">Type</th>
-          <th align="left">Completion Date</th>
-          <th align="left">Notes</th>
-          <th align="left">Status</th>
-          <th align="left"></th>
+          <th align="center" style="width: 5%"><input type="checkbox"/></th>
+          <th align="left" style="width: 20%">Type</th>
+          <th align="left" style="width: 25%">Completion Date <sl-icon name="caret-down-fill"></sl-icon></th>
+          <th align="left" style="width: 30%">Notes</th>
+          <th align="left" style="width: 15%">Status <sl-icon name="caret-down-fill"></sl-icon></th>
+          <th align="left" style="width: 5"></th>
         </tr>
 
         <tr>
-          <td><input type="checkbox"/></td>
+          <td align="center" ><input type="checkbox"/></td>
           <td>This is a cell</td>
           <td>04/01/2021</td>
           <td>These are notes</td>
-          <td><sl-badge type="primary" pill>Primary</sl-badge></td>
+          <td><sl-badge type="primary" pill>Active</sl-badge></td>
           <td><sl-icon name="caret-down-fill"></sl-icon></td>
         </tr>
         <tr>
-          <td><input type="checkbox"/></td>
+          <td align="center" ><input type="checkbox"/></td>
           <td>This is a cell</td>
           <td>04/01/2021</td>
           <td>These are notes</td>
-          <td><sl-badge type="info" pill>Info</sl-badge></td>
+          <td><sl-badge type="info" pill>On Hold</sl-badge></td>
           <td><sl-icon name="caret-down-fill"></sl-icon></td>
         </tr>
         <tr>
-          <td><input type="checkbox"/></td>
+          <td align="center" ><input type="checkbox"/></td>
           <td>This is a cell</td>
           <td>04/01/2021</td>
           <td>These are notes</td>
-          <td><sl-badge type="success" pill>Success</sl-badge></td>
+          <td><sl-badge type="success" pill>Complete</sl-badge></td>
           <td><sl-icon name="caret-down-fill"></sl-icon></td>
         </tr>
         <tr>
-          <td><input type="checkbox"/></td>
+          <td align="center" ><input type="checkbox"/></td>
           <td>This is a cell</td>
           <td>04/01/2021</td>
           <td>These are notes</td>
-          <td><sl-badge type="warning" pill>Warning</sl-badge></td>
+          <td><sl-badge type="warning" pill>Delayed</sl-badge></td>
           <td><sl-icon name="caret-down-fill"></sl-icon></td>
         </tr>
         <tr>
-          <td><input type="checkbox"/></td>
+          <td align="center" ><input type="checkbox"/></td>
           <td>This is a cell</td>
           <td>04/01/2021</td>
           <td>These are notes</td>
-          <td><sl-badge type="danger" pill>Danger</sl-badge></td>
+          <td><sl-badge type="danger" pill>Canceled</sl-badge></td>
           <td><sl-icon name="caret-down-fill"></sl-icon></td>
         </tr>
 
