--- a/src/app/sl-progress-card/sl-progress-card.component.scss
+++ b/src/app/sl-progress-card/sl-progress-card.component.scss
@@ -8,7 +8,7 @@
 .progress-card {
   height: 150px;
   width: 400px;
-  border: 1px solid darkgrey;
+  border: 1px solid #DEE0E2;
   box-shadow: 1px 5px 5px grey;
   border-radius: 10px;
   margin: 10px 0 0 10px;
