--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -1,5 +1,19 @@
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+}
+
 td {
-  width: 75vw;
+  width: 5vw;
+}
+
+tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+table tr {
+  line-height: 50px;
 }
 
 sl-input {
@@ -12,26 +26,19 @@ sl-button {
 }
 
 .table-container {
-  border: 1px solid grey;
+  border: 1px solid #DEE0E2;
   border-radius: 5px;
-  box-shadow: 1px 5px 5px darkgrey;
+  box-shadow: 1px 5px 5px grey;
   margin-right: 2em;
 
   &-table {
-    margin: 1em 0 0 1em;
-    padding: 1em;
+    margin-top: 1em;
   }
 }
 .table-header-action {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin: 1em 0 0 1em;
-
-  &-search {
-    display: flex;
-    flex-direction: row;
-  }
+  margin: 1em 0 0 5em;
 
   &-actions {
     display: flex;
@@ -39,5 +46,8 @@ sl-button {
     margin-right: 2em;
   }
 
+  .checkboxes {
+    width: 20px;
+  }
 
 }
