--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -8,9 +8,15 @@ td {
   width: 5vw;
 }
 
-tr:nth-child(odd) {
-  background-color: #f2f2f2;
+thead {
+  background-color: #f2f2f2;;
+  padding: 1em 0 1em 0;
+  width: 30px;
 }
+
+// tr:nth-child(odd) {
+//   background-color: #f2f2f2;
+// }
 
 table tr {
   line-height: 50px;
@@ -24,6 +30,7 @@ sl-input {
 sl-button {
   margin-right: 1em;
 }
+
 
 .table-container {
   border: 1px solid #DEE0E2;
@@ -51,3 +58,35 @@ sl-button {
   }
 
 }
+
+// fold table
+table.fold-table {
+  > tbody {
+    // view segment
+    > tr.view {
+      td, th {cursor: pointer;}
+    }
+
+    // fold segment
+    > div.fold {
+      display: none;
+    }
+  }
+}
+
+
+
+// fold content
+.fold-content {
+  padding: 1em;
+  h3 { margin-top:0; }
+  > table {
+    border: 2px solid #ccc;
+    > tbody {
+      tr:nth-child(odd) {
+        background: #eee;
+      }
+    }
+  }
+}
+
