adjustment to table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,14 @@
     <app-table></app-table>
   </div>
 
+  <sl-menu style="max-width: 200px; border: solid 1px var(--sl-panel-border-color); border-radius: var(--sl-border-radius-medium);">
+    <!-- <sl-menu-item value="undo">Undo</sl-menu-item>
+    <sl-menu-item value="redo">Redo</sl-menu-item>
+    <sl-menu-divider></sl-menu-divider>
+    <sl-menu-item value="cut">Cut</sl-menu-item>
+    <sl-menu-item value="copy">Copy</sl-menu-item>
+    <sl-menu-item value="paste">Paste</sl-menu-item>
+    <sl-menu-item value="delete">Delete</sl-menu-item> -->
+  </sl-menu>
 
 </div>
